--- a/.github/workflows/maven-dependabot.yml
+++ b/.github/workflows/maven-dependabot.yml
@@ -37,8 +37,16 @@ jobs:
     - name: Maven Dependency Tree Dependency Submission
       uses: advanced-security/maven-dependency-submission-action@v2.0.1
     
+    dependabot:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
     - name: Run Dependabot
-      uses: docker://dependabot/dependabot-core:latest
-      env:
-        GITHUB_TOKEN: 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
-        permissions: read-all|write-all
+      uses: dependabot/actions/check@v2
+
+    - name: Send alert
+      uses: dependabot/actions/notify@v1
+      with:
+        repo-token: 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
+        message: "ALERT !!! Dependabot found a security vulnerability and a pull request was generated to resolve it."
+  
